@@ -9,5 +9,5 @@ AC_CHECK_PROGS(emacs,emacs xemacs)
 dnl Check for standard headers.
 AC_HEADER_STDC
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT([Makefile config/emacs-init-snippet.el])
 
