@@ -1,5 +1,10 @@
 2002-08-21  Luke Gorrie  <luke@bluetail.com>
 
+	* config/emacs-init-snippet.el.in: Using autoconf on the .emacs
+	snippet to setup the right load-path. It seems that just making a
+	directory in ${prefix}/share/emacs/site-lisp/ doesn't get you
+	into the load path automatically.
+
 	* elisp/edb.el, distel.erl: Reworked the debugger so that the
 	Monitor process tracks the current set of breakpoints and
 	interpreted modules. This lays the ground work for showing
